--- a/jokedisplay/src/main/res/values/strings.xml
+++ b/jokedisplay/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Joke Display</string>
     <string name="action_settings">Settings</string>
-    <string name="missing_joke">Sorry, we are not magicians</string>
+    <string name="missing_joke">Sorry, something went wrong</string>
+    <string name="credits_string">All jokes were provided by: http://www.icndb.com/</string>
 </resources>
